<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="titulo_reproductor">Reproductor de música</string>
    <string name="titulo_camara">Camara</string>
    <string name="boton">Pasar</string>
    <string name="title_activity_navigation">Menu principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aplicacion Final</string>
    <string name="nav_header_subtitle">Version de prueba</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nombre">Nombre</string>
    <string name="clave">Clave</string>
    <string name="entrar">Entrar</string>
    <string name="registrar">Registrar</string>
    <string name="confirmarRegistro">Confirmar</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="agregar">Agregar</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="hintGestion">Inserta un usuario</string>
    <string name="etRegistrar_usuario">Registrar usuario</string>
    <string name="cancelar">Cancelar</string>
    <string name="etiquetaGaleria">Galeria</string>
    <string name="etiquetaNotas">Notas</string>
    <string name="etiquetaSonidos">Sonidos</string>
    <string name="etiquetaCamara">Camara</string>
    <string name="creditos">Creditos</string>
    <string name="lista_de_usuarios">Lista de usuarios</string>
    <string name="iniciar_string_cerrarsesion">Iniciar sesion</string>
    <string name="todo">TODO</string>
    <string name="foto">Hacer foto</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="inserta_una_pass">Inserta una contraseña</string>
    <string name="inserta_un_usuario">Inserta un usuario</string>
    <string name="nombre_nota">Nombre Nota</string>
    <string name="crear_nota_nueva">✚ Crear nota nueva</string>
    <string name="guardar">✔Guardar</string>
    <string name="bcancelarNota">✘Cancelar</string>
    <string name="bborrarNota">✘Borrar</string>
    <string name="escribe_algo">📝Escribe algo</string>
</resources>
